--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,8 +50,6 @@ jobs:
       - name: Publish
         working-directory: pkg
         run: npm publish --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish-jsr:
     if: startsWith(github.ref, 'refs/tags/v')
@@ -97,6 +95,8 @@ jobs:
       - name: Publish
         working-directory: pkg
         run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-github-release:
     if: startsWith(github.ref, 'refs/tags/v')
